Revisão dos testes (uso de text blocks e getFirst)